[gd_scene load_steps=3 format=3 uid="uid://l7uh2auesjry"]

[ext_resource type="Script" uid="uid://tx5g7udmhd68" path="res://control_menugauche.gd" id="1_l6hst"]
[ext_resource type="PackedScene" uid="uid://dx0pg141lqpqk" path="res://recipePanel.tscn" id="1_usis7"]

[node name="ControlMenugauche" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -741.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6hst")

[node name="RecipePanel1" parent="." instance=ExtResource("1_usis7")]
layout_mode = 1
anchor_right = 0.567
anchor_bottom = 0.137
offset_left = 0.0
offset_top = 0.0
offset_right = -1.03702
offset_bottom = -0.776009
grow_horizontal = 1
grow_vertical = 1

[node name="RecipePanel2" parent="." instance=ExtResource("1_usis7")]
layout_mode = 1
anchor_top = 0.137
anchor_right = 0.564
anchor_bottom = 0.273
offset_left = 0.0
offset_top = -0.776009
offset_right = 0.195999
offset_bottom = -0.904007
grow_horizontal = 1
grow_vertical = 1

[node name="RecipePanel3" parent="." instance=ExtResource("1_usis7")]
layout_mode = 1
anchor_top = 0.273
anchor_right = 0.569
anchor_bottom = 0.409
offset_left = 0.0
offset_top = -0.904007
offset_right = -1.85901
offset_bottom = -1.03201
grow_horizontal = 1
grow_vertical = 1

[node name="RecipePanel4" parent="." instance=ExtResource("1_usis7")]
layout_mode = 1
anchor_top = 0.407
anchor_right = 0.567
anchor_bottom = 0.543
offset_left = 0.0
offset_top = 0.264008
offset_right = -1.03702
offset_bottom = 0.135986
grow_horizontal = 1
grow_vertical = 1

[node name="RecipePanel5" parent="." instance=ExtResource("1_usis7")]
layout_mode = 1
anchor_top = 0.543
anchor_right = 0.564
anchor_bottom = 0.676
offset_left = 0.0
offset_top = 0.135986
offset_right = 0.195999
offset_bottom = 1.95197
grow_horizontal = 1
grow_vertical = 1

[node name="RecipePanel6" parent="." instance=ExtResource("1_usis7")]
layout_mode = 1
anchor_top = 0.679
anchor_right = 0.564
anchor_bottom = 0.815
offset_left = 0.0
offset_top = 0.00799561
offset_right = 0.195999
offset_bottom = -0.120056
grow_horizontal = 1
grow_vertical = 1
